--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
+sudo: false
 language: node_js
 node_js: lts/*
 install: npm install
-script: npm test
+script:
+  - npm run lint
+  - npm run test:coveralls
