--- a/package.json
+++ b/package.json
@@ -36,8 +36,9 @@
     "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache"
+    "test:coveralls": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "test:prod": "npm run lint && npm run test -- --no-cache",
+    "test:watch": "jest --coverage --watch"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -86,7 +87,7 @@
     "@types/node": "^10.11.0",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
-    "coveralls": "^3.0.2",
+    "coveralls": "^3.1.0",
     "cross-env": "^5.2.0",
     "jest": "^25.1.0",
     "jest-config": "^25.1.0",
