--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 sudo: false
+
 language: node_js
+
 node_js: lts/*
-install: npm install
+
+cache:
+  directories:
+    - "$HOME/.npm"
+
+install: npm ci
+
 script:
   - npm run test:coveralls
