--- a/package.json
+++ b/package.json
@@ -71,6 +71,9 @@
     "singleQuote": true
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^10.17.47",
     "jest": "^26.6.3",
@@ -78,10 +81,7 @@
     "lodash.camelcase": "^4.3.0",
     "prettier": "^1.14.3",
     "rimraf": "^2.6.2",
-    "rollup": "^0.67.0",
-    "rollup-plugin-commonjs": "^9.1.8",
-    "rollup-plugin-json": "^3.1.0",
-    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup": "^2.44.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.26.0",
     "ts-jest": "^26.4.4",
