--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "node": ">=6.0.0"
   },
   "scripts": {
-    "lint": "eslint src/**",
+    "lint": "eslint src/**/*.ts",
     "prebuild": "rimraf dist",
     "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs src/wt.ts",
     "start": "rollup -c rollup.config.ts -w",
